# oraclematch

./: .gitignore  .oraclematch-progress.json  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.d2
scripts/: gpu_pilot_kc2.py
src/oraclematch/: __init__.py
src/oraclematch/audit/: __init__.py  antigaming.py
src/oraclematch/backends/: __init__.py  boltz2.py  mock.py  vina.py
src/oraclematch/calibration/: __init__.py  ensemble.py
src/oraclematch/core/: __init__.py  normalize.py  protocol.py
src/oraclematch/evolution/: __init__.py  mapelites.py  mutate.py
src/oraclematch/experiments/: __init__.py  controls.py  run_mvp.py
tests/integration/: test_cli.py  test_controls.py
tests/unit/: test_antigaming.py  test_ensemble.py  test_mapelites.py  test_mock_backend.py  test_normalize.py  test_protocol.py
